[package]
name = "pallet-admin-utils"
version = "4.0.0-dev"
description = "FRAME pallet for extending admin utilities."
authors = ["Bittensor Nucleus Team"]
homepage = "https://bittensor.com"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/opentensor/subtensor"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
subtensor-macros = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
log = { workspace = true }
pallet-subtensor = { version = "4.0.0-dev", default-features = false, path = "../subtensor" }
sp-weights = { workspace = true }
substrate-fixed = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-drand = { workspace = true, default-features = false }
sp-consensus-grandpa = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-tracing = { workspace = true }
sp-consensus-aura = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }
pallet-scheduler = { workspace = true }
pallet-grandpa = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"pallet-drand/std",
	"pallet-evm-chain-id/std",
	"pallet-grandpa/std",
	"pallet-scheduler/std",
	"pallet-subtensor/std",
	"scale-info/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-tracing/std",
	"sp-weights/std",
	"substrate-fixed/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-drand/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-subtensor/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-drand/try-runtime",
	"pallet-evm-chain-id/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-subtensor/try-runtime",
	"sp-runtime/try-runtime",
]
