[package]
name = "pallet-alpha-assets"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
scale-info = { workspace = true, features = ["derive"] }
sp-runtime.workspace = true
subtensor-macros.workspace = true
subtensor-runtime-common.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "scale-info/std",
    "sp-runtime/std",
    "subtensor-runtime-common/std",
]
