[package]
name = "pallet-anonymous-voting"
version = "4.0.0-dev"
authors = ["Bittensor Nucleus Team"]
edition.workspace = true
license = "Unlicense"
publish = false
homepage = "https://bittensor.com"
description = "A pallet for anonymous voting"
repository = "https://github.com/opentensor/subtensor"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
frame-system = { workspace = true }
frame-support = { workspace = true }
subtensor-runtime-common = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-system/std",
	"frame-support/std",
	"subtensor-runtime-common/std",
]
runtime-benchmarks = []
try-runtime = []
