[package]
name = "pallet-balancer-swap"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
substrate-fixed = { workspace = true }
safe-math = { workspace = true }
subtensor-macros = { workspace = true }
subtensor-runtime-common = { workspace = true }
subtensor-swap-interface = { workspace = true }
log = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "substrate-fixed/std",
    "subtensor-runtime-common/std",
    "subtensor-swap-interface/std",
    "log/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]



