[package]
name = "pallet-commitments"
version = "4.0.0-dev"
description = "Add the ability to commit generic hashed data for network participants."
authors = ["Bittensor Nucleus Team"]
homepage = "https://bittensor.com"
edition.workspace = true
license = "Unlicense"
publish = false
repository = "https://github.com/opentensor/subtensor"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
subtensor-macros.workspace = true
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
enumflags2.workspace = true

pallet-drand.workspace = true
tle.workspace = true
ark-serialize = { workspace = true, features = ["derive"] }
w3f-bls.workspace = true
rand_chacha.workspace = true
hex.workspace = true
sha2.workspace = true

log.workspace = true
subtensor-runtime-common.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true
pallet-balances.workspace = true

[features]
default = ["std"]
std = [
	"ark-serialize/std",
	"codec/std",
	"enumflags2/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"hex/std",
	"log/std",
	"pallet-balances/std",
	"pallet-drand/std",
	"rand_chacha/std",
	"scale-info/std",
	"sha2/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"subtensor-runtime-common/std",
	"tle/std",
	"w3f-bls/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-drand/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-drand/try-runtime",
]
