[package]
name = "pallet-crowdloan"
version = "0.1.0"
edition.workspace = true
authors = ["Bittensor Nucleus Team"]
license = "Apache-2.0"
homepage = "https://bittensor.com"
description = "FRAME crowdloan pallet"
publish = false
repository = "https://github.com/opentensor/subtensor"

[lints]
workspace = true

[dependencies]
subtensor-macros.workspace = true
scale-info = { workspace = true, features = ["derive"] }
codec = { workspace = true, features = ["max-encoded-len"] }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
subtensor-runtime-common.workspace = true

[dev-dependencies]
pallet-balances = { workspace = true, default-features = true }
pallet-preimage = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "log/std",
  "sp-core/std",
  "pallet-balances/std",
  "pallet-preimage/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-preimage/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-preimage/try-runtime",
]
