[package]
name = "pallet-derivatives"
version = "0.1.0"
edition.workspace = true
authors = ["Bittensor Nucleus Team"]
license = "Apache-2.0"
homepage = "https://bittensor.com"
description = "Derivatives based on TAO and Alpha"
publish = false
repository = "https://github.com/opentensor/subtensor"

[lints]
workspace = true

[dependencies]
subtensor-macros.workspace = true
scale-info = { workspace = true, features = ["derive"] }
codec = { workspace = true, features = ["max-encoded-len"] }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-balances.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
substrate-fixed.workspace = true
subtensor-runtime-common.workspace = true
log.workspace = true

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "log/std",
  "sp-core/std",
  "substrate-fixed/std",
	"subtensor-runtime-common/std",
  "pallet-balances/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
  "pallet-balances/try-runtime",
]
