[package]
name = "pallet-drand"
description = "FRAME pallet for briding to drand."
authors = ["Tony Riemer <driemworks@idealabs.network>"]
version = "0.0.1"
license = "MIT-0"
edition = "2021"
homepage = "https://www.idealabs.network"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.197", features = ["derive"], default-features = false }
serde_json = { version = "1.0.114", default-features = false }
log = { version = "0.4.21", default-features = false }
hex = { version = "0.4", features = ["serde"], default-features = false }
sha2 = { version = "0.10.8", default-features = false }
anyhow = "1.0.81"
# frame deps
frame-benchmarking = { workspace = true,  default-features = false, optional = true }
frame-support = { workspace = true,  default-features = false }
frame-system = { workspace = true,  default-features = false }
sp-core = { workspace = true,  default-features = false }
sp-io = { workspace = true,  default-features = false}
sp-runtime = { workspace = true, default-features = false}
# arkworks dependencies
sp-ark-bls12-381 = { git = "https://github.com/paritytech/substrate-curves", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-serialize = { version = "0.4.0", features = [ "derive" ], default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [ "r1cs", "snark" ] } 
ark-scale = { version = "0.0.11", default-features = false, features = ["hazmat"] }
w3f-bls = { git = "https://github.com/w3f/bls", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409",  default-features = false }

[dev-dependencies]
sp-keystore = { workspace = true,  default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"sha2/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-keyring/std",
	"sp-runtime/std",
	"serde/std",
	"serde_json/std",
	"hex/std",
	"sp-ark-bls12-381/std",
	"ark-bls12-381/std",
	"ark-serialize/std",
	"ark-ff/std",
	"ark-ec/std",
	"ark-std/std",
	"ark-crypto-primitives/std",
	"ark-scale/std",
	"w3f-bls/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
