[package]
name = "pallet-drand"
description = "FRAME pallet for briding to drand."
authors = ["Tony Riemer <driemworks@idealabs.network>"]
version = "0.0.1"
license = "MIT-0"
edition = "2021"
homepage = "https://www.idealabs.network"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false, features = [
	"derive",
] }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
] }
serde = { workspace = true, features = ["derive"], default-features = false }
serde_json = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
hex = { workspace = true, features = ["serde"], default-features = false }
sha2 = { workspace = true }
anyhow = { workspace = true }
# frame deps
frame-benchmarking = { workspace = true,  default-features = false, optional = true }
frame-support = { workspace = true,  default-features = false }
frame-system = { workspace = true,  default-features = false }
sp-core = { workspace = true,  default-features = false }
sp-io = { workspace = true,  default-features = false}
sp-runtime = { workspace = true, default-features = false}
# arkworks dependencies
sp-ark-bls12-381 = { workspace = true, default-features = false }
ark-bls12-381 = { workspace = true, features = ["curve"], default-features = false }
ark-serialize = { workspace = true, features = [ "derive" ], default-features = false }
ark-ff = { workspace = true, default-features = false }
ark-ec = { workspace = true, default-features = false }
ark-std = { workspace = true, default-features = false }
ark-crypto-primitives = { workspace = true, default-features = false, features = [ "r1cs", "snark" ] } 
ark-scale = { workspace = true, default-features = false, features = ["hazmat"] }
w3f-bls = { workspace = true, default-features = false }
sp-keyring = { workspace = true,  default-features = false }
subtensor-macros.workspace = true
tle = { workspace = true, default-features = false }

[dev-dependencies]
sp-keystore = { workspace = true,  default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"sha2/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-keyring/std",
	"sp-runtime/std",
	"serde/std",
	"serde_json/std",
	"hex/std",
	"sp-ark-bls12-381/std",
	"ark-bls12-381/std",
	"ark-serialize/std",
	"ark-ff/std",
	"ark-ec/std",
	"ark-std/std",
	"ark-crypto-primitives/std",
	"ark-scale/std",
	"w3f-bls/std",
	"tle/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
