[package]
name = "pallet-drand"
description = "FRAME pallet for briding to drand."
authors = ["Tony Riemer <driemworks@idealabs.network>"]
version = "0.0.1"
license = "MIT-0"
edition.workspace = true
homepage = "https://www.idealabs.network"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log.workspace = true
hex = { workspace = true, features = ["serde"] }
sha2.workspace = true
anyhow.workspace = true
# frame deps
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
# arkworks dependencies
sp-ark-bls12-381.workspace = true
ark-bls12-381 = { workspace = true, features = ["curve"] }
ark-serialize = { workspace = true, features = ["derive"] }
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-crypto-primitives = { workspace = true, features = ["r1cs", "snark"] }
ark-scale = { workspace = true, features = ["hazmat"] }
w3f-bls.workspace = true
sp-keyring.workspace = true
subtensor-macros.workspace = true
tle.workspace = true

[dev-dependencies]
sp-keystore.workspace = true

[features]
default = []
std = [
	"codec/std",
	"log/std",
	"sha2/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-keyring/std",
	"sp-runtime/std",
	"serde/std",
	"serde_json/std",
	"hex/std",
	"sp-ark-bls12-381/std",
	"ark-bls12-381/std",
	"ark-serialize/std",
	"ark-ff/std",
	"ark-ec/std",
	"ark-std/std",
	"ark-crypto-primitives/std",
	"ark-scale/std",
	"w3f-bls/std",
	"tle/std",
	"anyhow/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
