[package]
name = "pallet-governance-policy"
version = "1.0.0"
authors = ["Bittensor Nucleus Team"]
edition.workspace = true
license = "Apache-2.0"
homepage = "https://bittensor.com"
description = "Policy layer for the v2 governance flow: builds the two-track batched referendum on behalf of allowed proposers"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-io.workspace = true
log.workspace = true
subtensor-macros.workspace = true
pallet-referenda = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-subtensor-utility = { workspace = true }
pallet-multi-collective = { workspace = true }
pallet-subtensor = { workspace = true }
subtensor-swap-interface = { workspace = true }
subtensor-runtime-common = { workspace = true }
substrate-fixed = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = true }
pallet-preimage = { workspace = true, default-features = true }
pallet-scheduler = { workspace = true, default-features = true }
pallet-multi-collective = { workspace = true, default-features = true }
pallet-signed-voting = { workspace = true, default-features = true }
pallet-subtensor-utility = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "log/std",
    "scale-info/std",
    "pallet-referenda/std",
    "pallet-scheduler/std",
    "pallet-subtensor-utility/std",
    "pallet-multi-collective/std",
    "pallet-subtensor/std",
    "subtensor-swap-interface/std",
    "subtensor-runtime-common/std",
    "substrate-fixed/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
