[package]
name = "pallet-governance"
version = "4.0.0-dev"
authors = ["Bittensor Nucleus Team"]
edition.workspace = true
license = "Unlicense"
publish = false
repository = "https://github.com/opentensor/subtensor"
homepage = "https://bittensor.com"
description = "BitTensor governance pallet"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
frame.workspace = true
subtensor-macros.workspace = true
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-core.workspace = true
log.workspace = true
stp-crypto.workspace = true
blake2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = true }
pallet-preimage = { workspace = true, default-features = true }
pallet-scheduler = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
stp-crypto = { workspace = true, features = ["signing", "std"] }
curve25519-dalek = { version = "4", features = ["alloc", "rand_core"] }
rand = "0.8"
rand_core = "0.6"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "log/std",
    "sp-core/std",
    "stp-crypto/std",
    "blake2/std",
    "digest/std",
    "pallet-balances/std",
    "pallet-preimage/std",
    "pallet-scheduler/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-preimage/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-preimage/try-runtime",
    "pallet-scheduler/try-runtime",
]
