[package]
name = "pallet-limit-orders"
version = "0.1.0"
edition.workspace = true

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-support.workspace = true
frame-system.workspace = true
scale-info.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
substrate-fixed.workspace = true
subtensor-runtime-common.workspace = true
subtensor-swap-interface.workspace = true

[dev-dependencies]
sp-io.workspace = true
sp-keyring.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "substrate-fixed/std",
    "subtensor-runtime-common/std",
    "subtensor-swap-interface/std",
]
