[package]
name = "pallet-proxy"
version = "40.1.0"
authors = ["Bittensor Nucleus Team"]
edition.workspace = true
license = "Apache-2.0"
homepage = "https://bittensor.com"
description = "FRAME proxying pallet"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["max-encoded-len"] }
frame = { workspace = true, features = ["runtime"] }
scale-info = { workspace = true, features = ["derive"] }
subtensor-macros.workspace = true
log.workspace = true
pallet-evm.workspace = true
sp-core.workspace = true

[dev-dependencies]
pallet-balances = { default-features = true, workspace = true }
pallet-utility = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
try-runtime = [
	"frame/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-evm/try-runtime",
]
