[package]
name = "pallet-subtensor-proxy"
version = "40.1.0"
authors = ["Bittensor Nucleus Team"]
edition.workspace = true
license = "Apache-2.0"
homepage = "https://bittensor.com"
description = "FRAME proxying pallet"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["max-encoded-len"] }
frame = { workspace = true, features = ["runtime"] }
scale-info = { workspace = true, features = ["derive"] }
subtensor-macros.workspace = true
frame-system.workspace = true
frame-support.workspace = true

[dev-dependencies]
pallet-balances = { default-features = true, workspace = true }
pallet-subtensor-utility = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-subtensor-utility/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-subtensor-utility/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
