[package]
name = "pallet-rate-limiting"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-support.workspace = true
frame-system.workspace = true
scale-info = { workspace = true, features = ["derive"] }
sp-std.workspace = true
subtensor-runtime-common.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"subtensor-runtime-common/std",
	"serde",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
